<resources>
    <string name="app_name">RoamDevApp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="postcreate_info">Create New Post</string>
    <string name="postcreate_select">Select Image</string>
    <string name="postcreate_desc">Description</string>
    <string name="postcreate_loc">Location</string>
    <string name="postcreate_cancel">Cancel</string>
    <string name="postcreate_post">Post</string>
    <string name="postcreate_img">img</string>
    <string name="postcreate_dotdot">...</string>
</resources>
