<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="0dp"
    android:fillViewport="false">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sebastian.androidassign5.MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/postcreate_select"
        android:textSize="17dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp" />
    
    <ImageView
        android:id="@+id/pictureViewPost"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:onClick="buttonSelectImage"
        android:background="@android:color/transparent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/postcreate_img"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/imageSelectButton"
        android:layout_width="145dp"
        android:layout_height="106dp"
        android:background="@drawable/galleryicon"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        android:layout_marginStart="111dp"
        android:layout_marginEnd="8dp"
        android:onClick="buttonSelectImage"
        android:contentDescription="@string/postcreate_img"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postcreate_desc"
        android:textSize="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="62dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/pictureViewPost"
        android:layout_marginLeft="62dp" />
    <ImageView
        android:layout_width="37dp"
        android:layout_height="36dp"
        android:background="@mipmap/ic_description"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView4"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.888"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/postcreate_img"
        android:layout_marginTop="-29dp"
        app:layout_constraintTop_toBottomOf="@+id/pictureViewPost" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="367dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/postcreate_dotdot"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginStart="16dp"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="17dp"
        android:text="@string/postcreate_loc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginStart="62dp" />
    <ImageView
        android:layout_width="43dp"
        android:layout_height="39dp"
        android:background="@mipmap/ic_location"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView5"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/postcreate_img"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="369dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/postcreate_dotdot"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginStart="16dp" />

    <android.support.design.widget.FloatingActionButton
        app:srcCompat="@mipmap/ic_camerabuttongrey"
        app:fabSize="normal"
        android:id="@+id/floating_open_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="227dp"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        android:onClick="buttonOpenCamera"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postcreate_cancel"
        android:layout_marginStart="61dp"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="#c94e22"
        android:background="@android:color/transparent"
        android:onClick="buttonCancelNewPost"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postcreate_post"
        android:layout_marginStart="87dp"
        app:layout_constraintLeft_toRightOf="@+id/button"
        android:layout_marginTop="17dp"
        android:textColor="#37a360"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        android:background="@android:color/transparent"
        android:onClick="buttonPostNewPost"/>

</android.support.constraint.ConstraintLayout>
</ScrollView>
